--- a/css/itc-slider.css
+++ b/css/itc-slider.css
@@ -1,11 +1,35 @@
-/**
- * ItcSlider
- * @version 1.0.1
- * @author https://github.com/itchief
- * @copyright Alexander Maltsev 2020 - 2023
- * @license MIT (https://github.com/itchief/ui-components/blob/master/LICENSE)
- * @tutorial https://itchief.ru/javascript/slider
- */
+.container {
+    position: absolute;
+    width: 1920px;
+    left: 0px;
+    top: 180px;
+    max-width: 100%;
+    margin: 0 auto;
+    }
+
+    .itc-slider-items {
+      counter-reset: slide;
+    }
+
+    .itc-slider-item {
+      flex: 0 0 100%;
+      max-width: 100%;
+      counter-increment: slide;
+      height: 250px;
+      position: relative;
+    }
+
+    .itc-slider-item::before {
+      content: counter(slide) "/5";
+      position: absolute;
+      top: 10px;
+      right: 20px;
+      color: #fff;
+      font-style: italic;
+      font-size: 32px;
+      font-weight: bold;
+      display: block;
+    }
 
  .itc-slider {
     position: relative;
